; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openpam/lib/libpam/extr_openpam_configure.c_openpam_load_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openpam/lib/libpam/extr_openpam_configure.c_openpam_load_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@errno = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@PAM_LOG_DEBUG = common dso_local global i32 0, align 4
@PAM_LOG_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"%s: %m\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"found %s\00", align 1
@VERIFY_POLICY_FILE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8*, i32)* @openpam_load_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @openpam_load_file(i32* %0, i8* %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %15 = load i8*, i8** %10, align 8
  %16 = call i32* @fopen(i8* %15, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %16, i32** %12, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %33

18:                                               ; preds = %5
  %19 = load i32, i32* @errno, align 4
  store i32 %19, i32* %14, align 4
  %20 = load i32, i32* @errno, align 4
  %21 = load i32, i32* @ENOENT, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %18
  %24 = load i32, i32* @PAM_LOG_DEBUG, align 4
  br label %27

25:                                               ; preds = %18
  %26 = load i32, i32* @PAM_LOG_ERROR, align 4
  br label %27

27:                                               ; preds = %25, %23
  %28 = phi i32 [ %24, %23 ], [ %26, %25 ]
  %29 = load i8*, i8** %10, align 8
  %30 = call i32 @openpam_log(i32 %28, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %29)
  %31 = load i32, i32* %14, align 4
  store i32 %31, i32* @errno, align 4
  %32 = call i32 @RETURNN(i32 -1)
  br label %37

33:                                               ; preds = %5
  %34 = load i32, i32* @PAM_LOG_DEBUG, align 4
  %35 = load i8*, i8** %10, align 8
  %36 = call i32 @openpam_log(i32 %34, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* %35)
  br label %37

37:                                               ; preds = %33, %27
  %38 = load i32, i32* @VERIFY_POLICY_FILE, align 4
  %39 = call i64 @OPENPAM_FEATURE(i32 %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %53

41:                                               ; preds = %37
  %42 = load i8*, i8** %10, align 8
  %43 = load i32*, i32** %12, align 8
  %44 = call i32 @fileno(i32* %43)
  %45 = call i64 @openpam_check_desc_owner_perms(i8* %42, i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %53

47:                                               ; preds = %41
  %48 = load i32, i32* @errno, align 4
  store i32 %48, i32* %14, align 4
  %49 = load i32*, i32** %12, align 8
  %50 = call i32 @fclose(i32* %49)
  %51 = load i32, i32* %14, align 4
  store i32 %51, i32* @errno, align 4
  %52 = call i32 @RETURNN(i32 -1)
  br label %53

53:                                               ; preds = %47, %41, %37
  %54 = load i32*, i32** %7, align 8
  %55 = load i8*, i8** %8, align 8
  %56 = load i32, i32* %9, align 4
  %57 = load i32*, i32** %12, align 8
  %58 = load i8*, i8** %10, align 8
  %59 = load i32, i32* %11, align 4
  %60 = call i32 @openpam_parse_chain(i32* %54, i8* %55, i32 %56, i32* %57, i8* %58, i32 %59)
  store i32 %60, i32* %13, align 4
  %61 = load i32, i32* %13, align 4
  %62 = call i32 @RETURNN(i32 %61)
  %63 = load i32, i32* %6, align 4
  ret i32 %63
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @openpam_log(i32, i8*, i8*) #1

declare dso_local i32 @RETURNN(i32) #1

declare dso_local i64 @OPENPAM_FEATURE(i32) #1

declare dso_local i64 @openpam_check_desc_owner_perms(i8*, i32) #1

declare dso_local i32 @fileno(i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @openpam_parse_chain(i32*, i8*, i32, i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
